adds Validator for resolvable Ids